--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Image Uploader</title>
+    <title>Image Upload</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<h1>Image Uploader</h1>
-
-<form method="POST" enctype="multipart/form-data">
-    <input type="file" name="file" accept="image/*">
-    <input type="submit" value="Upload">
-</form>
-
-{% if image_url %}
-<h2>Uploaded Image:</h2>
-<img src="{{ image_url }}" alt="Uploaded Image">
-
-<h2>Image Details:</h2>
-<ul>
-    {% for key, value in image_details.items() %}
-    <li><strong>{{ key }}:</strong> {{ value }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Uploaded Image</h2>
+            <img id="uploaded-image" class="img-fluid" src="{{ image_url }}" alt="Uploaded Image">
+        </div>
+        <div class="col-md-6">
+            <h2>Image Details</h2>
+            <table class="table table-bordered">
+                <tr>
+                    <th>Filename:</th>
+                    <td>{{ image_details.Filename }}</td>
+                </tr>
+                <tr>
+                    <th>Size:</th>
+                    <td>{{ image_details.Size }}</td>
+                </tr>
+                <tr>
+                    <th>Format:</th>
+                    <td>{{ image_details.Format }}</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    <form method="POST" action="/" enctype="multipart/form-data">
+        <div class="form-group">
+            <input type="file" name="file" class="form-control-file">
+        </div>
+        <button type="submit" class="btn btn-primary">Upload</button>
+    </form>
+</div>
 </body>
 </html>
