made it work with compose.

--- a/src/templates/image-details.html
+++ b/src/templates/image-details.html
@@ -25,6 +25,10 @@
                 <img src="{{ s3_image_url }}" class="img-fluid" alt="Uploaded Image"  width="400" height="400"/>
             </div>
             <div class="mt-3">
+                <h5 class="card-title mt-4">Uploaded Image:</h5>
+                <img src="{{ processed_picture_path }}" class="img-fluid" alt="Resulted Image"  width="400" height="400"/>
+            </div>
+            <div class="mt-3">
                 <a href="/" class="btn btn-primary">Upload Another Image</a>
             </div>
         </div>
