--- a/src/templates/image-details.html
+++ b/src/templates/image-details.html
@@ -3,6 +3,11 @@
 <head>
     <title>Image Upload Result</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        .highlight {
+            background-color: #FFDAB9; /* This is a pastel orange color */
+        }
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -25,9 +30,17 @@
                 <img src="{{ s3_image_url }}" class="img-fluid" alt="Uploaded Image"  width="400" height="400"/>
             </div>
             <div class="mt-3">
-                <h5 class="card-title mt-4">Uploaded Image:</h5>
+                <h5 class="card-title mt-4">Recognized: {{ comma_separated_ident }} , matched image:</h5>
                 <img src="{{ processed_picture_path }}" class="img-fluid" alt="Resulted Image"  width="400" height="400"/>
             </div>
+            <div class="mt-3">
+                <h5 class="card-title mt-4">Pitches:</h5>
+
+                {% for item in pitch_array %}
+            <p class="highlight">{{ item }}</p>
+            {% endfor %}
+            </div>
+
             <div class="mt-3">
                 <a href="/" class="btn btn-primary">Upload Another Image</a>
             </div>
